--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@types/lodash.throttle": "^4.1.9",
-    "@types/react": "^18.2.37",
+    "@types/react": "^18.3.12",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2"
   },
@@ -31,7 +31,7 @@
     "lodash.throttle": "^4.1.1"
   },
   "peerDependencies": {
-    "react": "^17.x - 18.x"
+    "react": "^17.x - ^18.x"
   },
   "keywords": ["react", "orientation", "compass", "world compass", "device orientation", "absolute orientation"],
   "bugs": {
