--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lodash.throttle": "^4.1.1"
   },
   "peerDependencies": {
-    "react": "^17.x - ^18.x"
+    "react": "^17.x || ^18.x || ^18.3.x"
   },
   "keywords": ["react", "orientation", "compass", "world compass", "device orientation", "absolute orientation"],
   "bugs": {
